client/src/v2/styles_v2/greeting.module.css
.greeting_container {
  margin-top: 5vh;
  padding-top: 5%;
  padding-bottom: 5%;
  /* padding-left: 10%; */
}

.hello {
  font-size: 300%;
  font-weight: 300;
  color: #46bbfc;
  margin: 0;
  padding: none;
  animation: fadein 1s;
  /* animation-delay: 2s; */
}

.name {
  /* color: white; */
  font-size: 500%;
  margin: 0;
  padding: none;
  color: #053742;
  animation: fadein 1.5s;
  /* animation-delay: 2s; */
}

.subtitle {
  font-size: 400%;
  font-weight: 400;
  font-family: Arial, Helvetica, sans-serif;
  color: #a3dafa;
  margin: 0;
  animation: fadein 2s;
  /* animation-delay: 2s; */
}

.sidelinks_container {
  position: fixed;
  z-index: 2;
  width: 60%;
  height: 50vh;
  margin: 35vh auto 0 80vw;
}

@keyframes fadein {
  from {
    opacity: 0;
    transform: translate(0px, 50px);
  }
  to {
    opacity: 1;
    transform: translate(0px, 0px);
  }
}

/* <1050px screen width ——————————————————————————————————————————————————————————*/
@media (max-width: 1050px) {
  .hello {
    font-size: 250%;
  }

  .name {
    font-size: 450%;
  }

  .subtitle {
    font-size: 350%;
  }

  .sidelinks_container {
    position: fixed;
    z-index: 2;
    width: 60%;
    height: 50vh;
    margin: 35vh auto 0 80vw;
  }
}

@media (max-width: 1050px) and (max-height: 2000px) {
  .greeting_container {
    margin-top: 20vh;
  }
}

@media (max-width: 1050px) and (max-height: 1500px) {
  .greeting_container {
    margin-top: 20vh;
  }
}

@media (max-width: 1050px) and (max-height: 900px) {
  .greeting_container {
    margin-top: 5vh;
  }
}

/* <1000px screen width ——————————————————————————————————————————————————————————*/
@media (max-width: 1000px) {
  .hello {
    font-size: 180%;
  }

  .name {
    font-size: 380%;
  }

  .subtitle {
    font-size: 280%;
  }

  .sidelinks_container {
    position: fixed;
    z-index: 2;
    width: 60%;
    height: 50vh;
    margin: 35vh auto 0 80vw;
  }
}

/* <850px screen width ——————————————————————————————————————————————————————————*/
/* Top navigation activated */
@media (max-width: 850px) {
  .greeting_container {
    margin-top: 20vh;
  }

  .hello {
    font-size: 170%;
    margin-bottom: 2%;
  }

  .name {
    font-size: 350%;
    margin-bottom: 2%;
  }

  .subtitle {
    font-size: 300%;
    margin-bottom: 2%;
  }

  .subtext_container {
    display: flex;
    flex-direction: column;
    width: 70%;
    margin: 5% auto 0 0;
    animation: fadein 3s;
  }

  .subtext {
    font-size: 150%;
    color: #95d2f5;
  }

  .subtext_link {
    font-size: 100%;
    font-weight: 600;
    color: white;
    width: 30%;
    margin: 5% 0;
    padding: 5%;
    background-color: #a3dafab0;
    border: 1px solid #46bbfc;
    border-radius: 5px;
    text-decoration: none;
    text-align: center;
  }
}

/* <750px screen width ——————————————————————————————————————————————————————————*/
@media (max-width: 750px) {
  .hello {
    font-size: 180%;
  }

  .name {
    font-size: 300%;
  }

  .subtitle {
    font-size: 250%;
  }
}

/* <700px screen width ——————————————————————————————————————————————————————————*/
@media (max-width: 700px) {
  .hello {
    font-size: 180%;
  }

  .name {
    font-size: 300%;
  }

  .subtitle {
    font-size: 250%;
  }
}

/* <650px screen width ——————————————————————————————————————————————————————————*/
@media (max-width: 650px) {
  .hello {
    font-size: 160%;
  }

  .name {
    font-size: 250%;
  }

  .subtitle {
    font-size: 200%;
  }
}

/* <550px screen width ——————————————————————————————————————————————————————————*/
@media (max-width: 550px) {
  .hello {
    font-size: 150%;
  }

  .name {
    font-size: 220%;
  }

  .subtitle {
    font-size: 180%;
  }

  .subtext {
    font-size: 130%;
  }
}

@media (max-width: 550px) and (max-height: 900px) {
  .greeting_container {
    margin-top: 30vh;
  }
}

/* <480px screen width ——————————————————————————————————————————————————————————*/
@media (max-width: 480px) {
  .hello {
    font-size: 120%;
  }

  .name {
    font-size: 200%;
  }

  .subtitle {
    font-size: 150%;
  }

  .subtext_container {
    width: 80%;
  }

  .subtext {
    font-size: 120%;
  }
}

/* <430px screen width ——————————————————————————————————————————————————————————*/
@media (max-width: 430px) {
  .hello {
    font-size: 110%;
  }

  .name {
    font-size: 180%;
  }

  .subtitle {
    font-size: 140%;
  }

  .subtext_link {
    font-size: 90%;
  }
}

/* <400px screen width ——————————————————————————————————————————————————————————*/
@media (max-width: 400px) {
  .hello {
    font-size: 110%;
  }

  .name {
    font-size: 170%;
  }

  .subtitle {
    font-size: 130%;
  }

  .subtext_container {
    width: 100%;
  }

  .subtext_link {
    font-size: 80%;
  }
}

/* <380px screen width ——————————————————————————————————————————————————————————*/
@media (max-width: 380px) {
  .hello {
    font-size: 100%;
  }

  .name {
    font-size: 150%;
  }

  .subtitle {
    font-size: 120%;
  }

  .subtext {
    font-size: 100%;
  }
}

